# deploy_demo

./: .gitignore  README.md
onnxruntime/x86_ubuntu/: x86_ubuntu_cpp_onnxruntime1.8.1.md  x86_ubuntu_cpp_onnxruntime1.8.1_gpu.md
onnxruntime/x86_ubuntu/onnxruntime_cpp/: CMakeLists.txt  main.cpp
onnxruntime/x86_ubuntu/onnxruntime_cpp_gpu/: CMakeLists.txt  main.cpp
onnxruntime/x86_windows/: x86_win10_cpp_onnxruntime1.8.1.md  x86_win10_cpp_onnxruntime1.8.1_gpu.md  x86_win10_python_onnxruntime1.8.1.md  x86_win10_python_onnxruntime1.8.1_gpu.md
onnxruntime/x86_windows/cpp/onnxruntime_demo/: main.cpp
onnxruntime/x86_windows/cpp/onnxruntime_demo_gpu/: main.cpp
onnxruntime/x86_windows/python/: iqa_demo.py
tensorrt/x86_ubuntu/: x86_ubuntu_cpp_tensorrt7.2_gpu.md  x86_ubuntu_python_tensorrt7.2.md
tensorrt/x86_ubuntu/tensorrt_cpp/: CMakeLists.txt  READEME.md  UML.plantuml  main.cpp
tensorrt/x86_ubuntu/tensorrt_cpp/classifier/: CMakeLists.txt  classification.cpp  classification.h  gpu_allocator.cpp  gpu_allocator.h
tensorrt/x86_windows/: x86_win10_cpp_tensorrt7.0.md
tensorrt/x86_windows/trt_cpp/: classification.cpp  classification.h  gpu_allocator.h  main.cpp  network.h  plugin_factory.h  trtCommon.h
